# ti-engine

./: .gitignore  .npmignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build-all.sh  index.d.ts  index.html  index.js  index.node.js  index.web.js  package.json  sitemap.xml  ti-engine-1.1.2.tgz
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: hierarchy.html  index.html  modules.html
api/assets/: navigation.js  search.js
api/enums/: ConstantModelType.html  DeviationModel.html  MovingAverageType.html  Position.html
api/functions/: default.html
api/interfaces/: CandleIndicatorsBulk.html  CandleIndicatorsSingle.html  ChartTrends.html  CorrelationIndicatorsBulk.html  CorrelationIndicatorsSingle.html  MomentumIndicatorsBulk.html  MomentumIndicatorsSingle.html  MovingAverageBulk.html  MovingAverageSingle.html  (+10 more)
docs/: docusaurus.config.js  index.html  package.json  sidebars.js
howto/: index.html
src/: candle_indicators.rs  chart_trends.rs  correlation_indicators.rs  lib.rs  momentum_indicators.rs  moving_average.rs  other_indicators.rs  standard_indicators.rs  strength_indicators.rs  trend_indicators.rs  volatility_indicators.rs
test/: candleIndicators.node.test.js  chartTrends.node.test.js  corelationIndicators.node.test.js  momentumIndicators.node.test.js  movingAverage.node.test.js  otherIndicators.node.js  standardIndicators.node.test.js  strengthIndicators.node.test.js  trendIndicators.node.test.js  volatilityIndicators.node.test.js
tutorials/: index.html
(+136 files in other folders)
