[package]
name = "ti_engine"
version = "1.1.1"
edition = "2021"
description = "WASM bindings for RustTI technical indicators for Node and browser"
license = "MIT"
repository = "https://github.com/ChironMind/ti_engine"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rust_ti = "2.2.0"
# rust_ti = { path = "../rust_ti" } # for local dev

[package.metadata.wasm-pack.profile.release]
# Optimize for size; tweak as needed
wasm-opt = false  # Disabled to avoid download issues in CI environment
